--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">SwipeContacts</string>
+
+    <string name="contact_phone">PHONE</string>
+    <string name="contact_email">EMAIL</string>
+    <string name="main_save">SAVE</string>
+    <string name="main_delete">DELETE</string>
+    <string name="main_restore">RESTORE</string>
+    <string name="trash_delete_all">DELETE ALL</string>
+    <string name="trash_done">DONE</string>
+    <string name="setting_message">지금까지 삭제한 연락처</string>
 </resources>
