config and connect ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="main_save">SAVE</string>
     <string name="main_delete">DELETE</string>
     <string name="main_restore">RESTORE</string>
+    <string name="trash_title">TRASH</string>
     <string name="trash_delete_all">DELETE ALL</string>
-    <string name="trash_done">DONE</string>
+    <string name="setting_title">SETTING</string>
+    <string name="setting_done">DONE</string>
     <string name="setting_message">지금까지 삭제한 연락처</string>
 </resources>
