--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="contact_phone">PHONE</string>
     <string name="contact_email">EMAIL</string>
+    <string name="contact_email_default">No Email</string>
     <string name="main_save">SAVE</string>
     <string name="main_delete">DELETE</string>
     <string name="main_restore">RESTORE</string>
