--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="main_save">SAVE</string>
     <string name="main_delete">DELETE</string>
     <string name="main_restore">RESTORE</string>
+    <string name="main_try_again">TRY AGAIN</string>
     <string name="trash_title">TRASH</string>
     <string name="trash_delete_all">DELETE ALL</string>
     <string name="setting_title">SETTING</string>
