--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,26 @@
 <resources>
     <string name="app_name">SwipeContacts</string>
 
+    <!-- [where]_[desc]  -->
+
     <string name="contact_phone">PHONE</string>
     <string name="contact_email">EMAIL</string>
     <string name="contact_email_default">No Email</string>
+
     <string name="main_save">SAVE</string>
     <string name="main_delete">DELETE</string>
     <string name="main_restore">RESTORE</string>
     <string name="main_try_again">TRY AGAIN</string>
+
     <string name="trash_title">TRASH</string>
     <string name="trash_delete_all">DELETE ALL</string>
+
     <string name="setting_title">SETTING</string>
     <string name="setting_done">DONE</string>
-    <string name="setting_message">지금까지 삭제한 연락처</string>
-    <string name="setting_license">OPENSOURCE LICENSE</string>
+    <string name="setting_license">OPEN SOURCE LICENSE</string>
+
+    <string name="test_name">김정문</string>
+    <string name="test_phone">010–5550–8540</string>
+    <string name="test_email">test13254@gmail.com</string>
+
 </resources>
