--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">SwipeContacts</string>
 
     <!-- [where]_[desc]  -->
@@ -17,7 +17,12 @@
 
     <string name="setting_title">SETTING</string>
     <string name="setting_done">DONE</string>
-    <string name="setting_license">OPEN SOURCE LICENSE</string>\
+
+    <string name="license_title">OPENSOURCE LICENSE</string>
+
+    <string name="dialog_message">This behavior is irreversible.\nDo you really want to delete all your contacts?</string>
+    <string name="dialog_ok">OK</string>
+    <string name="dialog_cancel" tools:ignore="ButtonCase">CANCEL</string>
 
     <string name="test_name">김정문</string>
     <string name="test_name_long">전기전자 공학부 김정민 선배</string>
