--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,11 @@
 
     <string name="license_title">OPEN SOURCE LICENSE</string>
     <string name="license_1">CardStackView</string>
-    <string name="license_1_contents">
+    <string name="license_1_contents">\n
     Copyright 2018 yuyakaido\n\n
 
     Licensed under the Apache License, Version 2.0 (the "License");\n
-    you may not use this file except in compliance with the License.\n
+    you may not use this file except in compliance with the License.
     You may obtain a copy of the License at\n\n
 
         http://www.apache.org/licenses/LICENSE-2.0\n\n
@@ -36,7 +36,7 @@
     limitations under the License.\n
     </string>
     <string name="license_2">Glide</string>
-    <string name="license_2_contents">
+    <string name="license_2_contents">\n
     Copyright © 2013 Byron Ruth\n\n
 
     All rights reserved.\n\n
