--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,10 @@
     <string name="setting_title">SETTING</string>
     <string name="setting_done">DONE</string>
 
-    <string name="license_title">OPEN SOURCE LICENSE</string>
-    <string name="license_1">CardStackView</string>
-    <string name="license_1_contents">\n
+    <string name="license_title">OPENSOURCE LICENSE</string>
+    <string name="license_1" translatable="false">CardStackView</string>
+    <string name="license_1_url" translatable="false">https://github.com/yuyakaido/CardStackView</string>
+    <string name="license_1_contents" translatable="false">\n
     Copyright 2018 yuyakaido\n\n
 
     Licensed under the Apache License, Version 2.0 (the "License");\n
@@ -35,8 +36,9 @@
     See the License for the specific language governing permissions and
     limitations under the License.\n
     </string>
-    <string name="license_2">Glide</string>
-    <string name="license_2_contents">\n
+    <string name="license_2" translatable="false">Glide</string>
+    <string name="license_2_url" translatable="false">https://github.com/bumptech/glide</string>
+    <string name="license_2_contents" translatable="false">\n
     Copyright © 2013 Byron Ruth\n\n
 
     All rights reserved.\n\n
@@ -60,12 +62,16 @@
     LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
     ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
     (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-    SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+    SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n
     </string>
 
     <string name="dialog_message">This behavior is irreversible.\nDo you really want to delete all your contacts?</string>
     <string name="dialog_ok">OK</string>
     <string name="dialog_cancel" tools:ignore="ButtonCase">CANCEL</string>
+
+    <string name="setting_deleted_title">Number of contacts\ndeleted so far is </string>
+    <string name="setting_version">VERSION</string>
+    <string name="setting_contact_us">CONTACT US</string>
 
     <string name="test_name">김정문</string>
     <string name="test_name_long">전기전자 공학부 김정민 선배</string>
