Edit item ui of trash

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="on_boarding_message_3">It\'s OK !\nYou can delete or recover the card from the trash.</string>
 
     <string name="test_name" translatable="false">김정문</string>
-    <string name="test_name_long" translatable="false">#bnk투자증권 하태욱 대리</string>
+    <string name="test_name_long" translatable="false">#bnk투자증권 하태욱 대리 / 김정문 과장 친구</string>
     <string name="test_phone" translatable="false">010–5550–8540</string>
     <string name="test_email" translatable="false">test13254@gmail.com</string>
 
